Refatoracao do projeto demo

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -7,13 +7,13 @@
     </h:head>
     <h:body>
        <h1>
-            CRUD de Pessoas
+            CRUD de Carro
         </h1>
         <br></br>
         <br></br>
         <br></br>
          <h:form>
-            <h:link value="Cadastro de Pessoas" outcome="/Paginas/Cadastro"></h:link>
+            <h:link value="Cadastro de Carro" outcome="/Paginas/Cadastro"></h:link>
             <br></br>
             <h:link value="Pesquisar, Editar, Excluir" outcome="/Paginas/PEE"></h:link>
         </h:form>
