--- a/web/Paginas/Cadastro.xhtml
+++ b/web/Paginas/Cadastro.xhtml
@@ -3,10 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Cadastro de Pessoas</title>
+        <title>Cadastro de Carro</title>
     </h:head>
     <h:body>
-        <h1>Cadastro de Pessoas</h1>
+        <h1>Cadastro de Carro</h1>
         <br></br>
         <br></br>
         <br></br>
